[package]
name = "ssache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
clokwerk = "0.4.0"
tokio = { version = "1", features = ["full"] }
